# funkyheatmappy

./: .buildinfo  .gitignore  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  env.yml  genindex.html  index.html  mtcars.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tox.ini
.doctrees/: environment.pickle  index.doctree  mtcars.doctree
.doctrees/autoapi/: index.doctree
.github/workflows/: documentation.yml  python-app.yml
_sources/: index.rst.txt  mtcars.rst.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/funkyheatmappy/: index.html
docs/: conf.py  dynbenchmark.rst  index.rst  installation.rst  mtcars.rst  usage.rst
docs/source/: conf.py  index.rst
funkyheatmappy/: __init__.py  add_column_if_missing.py  calculate_positions.py  calculate_row_positions.py  compose_plot.py  create_legends.py  funkyheatmappy.py  make_data_processor.py  position_arguments.py  score_to_funkyrectangle.py  verify_column_info.py  verify_data.py  verify_legends.py  verify_palettes.py  verify_row_groups.py  verify_row_info.py
funkypyheatmap/: __init__.py  add_column_if_missing.py  calculate_column_positions.py  calculate_positions.py  calculate_row_positions.py  compose_plot.py  funkypyheatmap.py  make_data_processor.py  score_to_funkyrectangle.py  verify_column_groups.py  verify_column_info.py  verify_data.py  verify_palettes.py  verify_row_groups.py  verify_row_info.py
test/: test_funkyheatmappy.py  test_funkypyheatmap.py
test/data/: dynbenchmark_data.csv  (+10 more)
(+59 files in other folders)
